# ai-llm-class

./: README.md
Day_3/: 1_Basic_RAG.ipynb  2_Production_RAG.ipynb
Day_4/: 1-ragas.ipynb  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
day_5/: 1-advanced_retrievers.ipynb  pyproject.toml
day_5/bills/: ai_law.json
day_6/: 1-langgraph.ipynb  2-openai_agents.ipynb
day_7/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
day_7/content/data/9a7348f6/: AI_Bills_Outline.txt  AI_Bills_Positioning_Statement.txt  AI_Bills_Positioning_Statement_Edited.txt
day_7/content/data/d064e07a/: AI_Bills_Philippines_Response.md
day_8/deep_research/: open-deep-research.ipynb  pyproject.toml
