[project]
name = "open_deep_research"
version = "0.0.5"
description = "Planning, research, and report generation."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "langgraph>=0.5.1",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.3.5",
    "langchain-anthropic>=0.3.8",
    "langsmith>=0.4.4",
    "openai>=1.61.0",
    "tavily-python>=0.7.9",
    "langchain-groq>=0.2.4",
    "exa-py>=1.8.9",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "jupyter>=1.1.1",
    "pydantic>=2.8.2"  
]
